# Microchain

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
microchain/: block.py  blockchain.py  node.py  schemas.py  server.py  transaction.py
mini_blockchain/: block.py  blockchain.py  schemas.py  server.py
