[tool.poetry]
name = "mini-blockchain"
version = "0.1.0"
description = ""
authors = ["Agustin Arce <agustinarceprincich@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["slim"], version = "^0.111.1"}
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
